--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -39,7 +39,8 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip wheel oldest-supported-numpy
-          python -m pip install conan ninja
+          python -m pip install ninja
+          python -m pip install conan==1.58.0
           conan install zlib/1.2.13@ -s compiler.version=16 -g cmake_paths
       - name: Build Python ${{ matrix.python-version }} wheel
         run: |
