--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           path: ./wheelhouse/*.whl
 
-  build_windows_wheels:
+  build_wheels_windows:
     runs-on: windows-latest
     strategy:
       fail-fast: false
@@ -52,6 +52,21 @@ jobs:
         with:
           path: "dist/*.whl"
 
+  build_wheels_m1:
+    name: Build wheels on macos-11
+    runs-on: macos-11
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.12.3
+        env:
+          CIBW_ARCHS_MACOS: x86_64 arm64
+
+      - uses: actions/upload-artifact@v3
+        with:
+          path: ./wheelhouse/*.whl
+
   build_sdist:
     name: Build source distribution
     runs-on: ubuntu-latest
@@ -66,7 +81,7 @@ jobs:
           path: dist/*.tar.gz
 
   upload_pypi:
-    needs: [build_wheels, build_sdist, build_windows_wheels]
+    needs: [build_wheels, build_sdist, build_wheels_windows, build_wheels_m1]
     runs-on: ubuntu-latest
     # upload to PyPI on every tag starting with 'v'
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
