--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -3,25 +3,8 @@ name: Build & publish PyPI packages
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  build_wheels:
-    name: Build wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-20.04]
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.12.3
-
-      - uses: actions/upload-artifact@v3
-        with:
-          path: ./wheelhouse/*.whl
-
-  build_manylinux_wheels:
+  build_manylinux:
+    name: Build wheels for Manylinux
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -36,7 +19,8 @@ jobs:
         with:
           path: ./wheelhouse/*.whl
 
-  build_wheels_windows:
+  build_windows:
+    name: Build wheels for Windows (${{ matrix.python-version }})
     runs-on: windows-latest
     strategy:
       fail-fast: false
@@ -67,8 +51,8 @@ jobs:
         with:
           path: "dist/*.whl"
 
-  build_wheels_m1:
-    name: Build wheels on macos-11
+  build_m1:
+    name: Build wheels for M1
     runs-on: macos-11
     steps:
       - uses: actions/checkout@v3
@@ -77,6 +61,19 @@ jobs:
         uses: pypa/cibuildwheel@v2.12.3
         env:
           CIBW_ARCHS_MACOS: x86_64 arm64
+
+      - uses: actions/upload-artifact@v3
+        with:
+          path: ./wheelhouse/*.whl
+
+  build_linux:
+    name: Build source and linux wheels
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.12.3
 
       - uses: actions/upload-artifact@v3
         with:
@@ -96,7 +93,8 @@ jobs:
           path: dist/*.tar.gz
 
   upload_pypi:
-    needs: [build_wheels, build_sdist, build_wheels_windows, build_wheels_m1]
+    name: Upload wheel to PyPI
+    needs: [build_sdist, build_linux, build_windows, build_m1, build_manylinux]
     runs-on: ubuntu-latest
     # upload to PyPI on every tag starting with 'v'
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
